tests/models/enum/named/isize/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1.0)]
        value: isize
    },
}
fn main() {}
